# cycling-social-agent

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.json
data/: sponsors.yaml  style_examples_en.md.example  style_examples_pt.md.example
docs/: setup.md
docs/superpowers/plans/: 2026-04-15-cycling-social-agent.md
docs/superpowers/specs/: 2026-04-15-cycling-social-agent-design.md
src/cycling_agent/: __init__.py  cli.py  config.py  logging.py  main.py
src/cycling_agent/agent/: __init__.py  orchestrator.py  reflect.py  runner.py
src/cycling_agent/agent/prompts/: __init__.py  drafter.md  orchestrator.md  reflector.md
src/cycling_agent/approval/: __init__.py  bot.py
src/cycling_agent/db/: __init__.py  engine.py  loaders.py  models.py  repo.py
src/cycling_agent/media/: __init__.py  _staticmaps_compat.py  route_map.py  stats_card.py
src/cycling_agent/publishers/: __init__.py  base.py  facebook.py  instagram.py
src/cycling_agent/strava/: __init__.py  client.py  poller.py
tests/: conftest.py
tests/fixtures/: strava_race_activity.json  strava_training_ride.json
tests/integration/: test_dry_run_workflow.py
tests/unit/: test_config.py  test_logging.py  test_main.py
tests/unit/agent/: test_orchestrator.py  test_reflect.py  test_runner.py
tests/unit/approval/: test_bot.py
tests/unit/db/: test_loaders.py  test_models.py  test_repo.py
tests/unit/media/: test_route_map.py  test_staticmaps_compat.py  test_stats_card.py
tests/unit/publishers/: test_facebook.py  test_instagram.py
tests/unit/strava/: test_client.py  test_poller.py
(+16 files in other folders)
